{
    "name": "PlayerController",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "62ea8a59-1f0e-4c28-815f-672fe7e1351d",
            "actions": [
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "8da6dc99-5ee2-4891-89d8-2113381c3019",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "6df1d9eb-0617-459a-aaaf-52f4e87ae06f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "62c9765b-98a2-4357-9ed8-f3a3727b7172",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "541a53d7-bcf4-44b4-9f02-c1f1e8e6f8c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f7466d6c-76ea-4377-857a-82c75402c829",
                    "path": "<Keyboard>/a",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c5558c8-6933-4b0b-90ba-4232128d406b",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14ad4f51-fe5d-4b9e-84ad-02ea2a4e0702",
                    "path": "<Keyboard>/d",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b15a44ea-d854-4065-8941-9da40526d7c6",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d9ae53ac-6f90-40ef-b757-cf6988f06cf2",
                    "path": "<Keyboard>/space",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b909bcb-948d-4fa2-b41a-7acaaa3157f9",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "005a9f0d-2411-4b0f-967e-ff36c9a939bd",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "447d0d15-54d7-4719-bb43-47b6a9b978a7",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}